doc(icons&vision): adding 3 icons for the section tools and adding a vision part in the project

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -26,6 +26,7 @@ We define actors as a shorthand for the roles played by entities outside the sys
 
 \subsection{Functional Requirements}
 
+\addtocontents{toc}{\protect\newpage}
 After several meetings with our client, the various functional requirements of our application are illustrated as follows:
 
 \subsubsection{For the Super Admin (Korpor)}
@@ -110,11 +111,12 @@ The overall diagram is illustrated in the following figure:
 \begin{figure}[htbp]
     \centering
     % Replace with actual image file once available
-    \includegraphics[width=0.85\textwidth]{images/diagram de case d utilisation general.png}
+    \includegraphics[width=0.9\textwidth]{images/diagram de case d utilisation general.png}
+    \vspace{2cm}
     \caption{General use case diagram}
     \label{fig:use-case-diagram}
 \end{figure}
-
+\newpage
 \section{Software architecture}
 
 Before starting the design and development of any computerized system, it is essential to prepare the architecture.
@@ -261,19 +263,19 @@ Storybook is a frontend workshop for building UI components and pages in isolati
 \subsection{Tools used for the report}
 
 % Comment out problematic icon
-%\subsubsection*{\protect\techicon{overleaf} Overleaf.com}
+\subsubsection*{\protect\techicon{overleaf} Overleaf.com}
 \subsubsection*{Overleaf.com}
 
 Overleaf is a collaborative cloud-based LaTeX editor used to write, edit, and publish scientific papers.
 
 % Comment out problematic icon
-%\subsubsection*{\protect\techicon{staruml} StarUML}
+\subsubsection*{\protect\techicon{staruml} StarUML}
 \subsubsection*{StarUML}
 
 StarUML is a software for creating and editing UML and SysML diagrams. Download the latest version for macOS, Windows or Linux, and see the release notes and supported diagram types.
 
 % Comment out problematic icon
-%\subsubsection*{\protect\techicon{canva} Canva}
+\subsubsection*{\protect\techicon{canva} Canva}
 \subsubsection*{Canva}
 
 Canva is a global company that empowers people to design anything and publish anywhere. Learn about its mission, values, commitments, awards, product, and careers.
@@ -321,7 +323,6 @@ The backlog was created before the sprints to plan the milestones and determine 
     \hline
     PB004 & Admin Management & As a Super Admin, I want to manage admin accounts for different real estate companies & Should \\
     
-    \newpage
     
     % Super Admin Features section
     \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Super Admin Features}}} \\
@@ -337,6 +338,8 @@ The backlog was created before the sprints to plan the milestones and determine 
     PB009 & AI Integration & As a Super Admin, I want to chat with an AI assistant that can securely access database information & Could \\
     \hline
     
+    \newpage
+
     % Admin Features section
     \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Admin Features}}} \\
     \hline
