--- a/chapter3.tex
+++ b/chapter3.tex
@@ -19,14 +19,16 @@ The system supports three distinct user types, each with different permissions a
 \subsubsection{Sign-up Process}
 The sign-up process is illustrated in Figure \ref{fig:signup-diagram} below. The diagram shows the authentication flow for new users registering in the system.
 
-\begin{figure}[htbp]
+\begin{figure}[ht!]
     \centering
-    \includegraphics[width=0.5\textwidth]{images/diagram de case d utilisation signup.png}
-    \vspace{1cm}
+    \includegraphics[width=1\textwidth]{images/diagram_de_case_d_utilisation_signup.png}
     \caption{Authentication Sign-up Use Case Diagram}
     \label{fig:signup-diagram}
 \end{figure}
-\vspace{3cm}
+
+% \vspace{1cm}
+\newpage
+
 The sign-up process includes user registration, role assignment, and account verification steps. During registration, users are categorized into one of the three user types: Super Admin, Admin, or Agent, with each type having different permissions and access levels within the system.
 
 \subsection{Sprint 1 Deliverables}
