feat(doc): adding first references version to the project

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -14,8 +14,8 @@
 % Bibliography
 \cleardoublepage
 \renewcommand{\bibname}{Bibliography}
-\begin{thebibliography}{99}
-  % Add your bibliography entries here
-  % \bibitem{ref1} Author, A. (Year). Title of the work. Publisher.
-  % \bibitem{ref2} Author, B. (Year). Title of the work. Journal, Volume(Issue), Pages.
-\end{thebibliography} 
+% \begin{thebibliography}{99}
+%   % Add your bibliography entries here
+%   % \bibitem{ref1} Author, A. (Year). Title of the work. Publisher.
+%   % \bibitem{ref2} Author, B. (Year). Title of the work. Journal, Volume(Issue), Pages.
+% \end{thebibliography} 
