--- a/chapter1.tex
+++ b/chapter1.tex
@@ -37,10 +37,7 @@ This preliminary study provides a review of some existing investment and asset m
 
 \subsection{Existing Solutions Study}
 
-For understanding the present scenario and to clearly demarcate our goals, some renowned investment platform analyses offering similar features, including ``Aseel'' and ``Stake'', are performed.
-\newpage
-\thispagestyle{empty}
-\newpage
+For understanding the present scenario and to clearly demarcate our goals, some renowned investment platform analyses offering similar features, including ``Aseel'' and ``Stake'', are performed \cite{G2CompetitiveAnalysis2024, AsanaCompetitiveAnalysis2024}.
 
 \subsection{Available solutions and analysis}
 
@@ -83,7 +80,7 @@ For understanding the present scenario and to clearly demarcate our goals, some 
 
 \subsection{Comparative and Critical Analysis}
 
-We can summarize all that comes from our analysis based on a number of criteria used for the evaluation of these applications.
+We can summarize all that comes from our analysis based on a number of criteria used for the evaluation of these applications \cite{LyssnaUXAnalysis2024, StrategicManagementInsightCA2024}.
 
 \begin{itemize}
     \item \textbf{Speed (C1)}: The platform should obtain value for the user as fast as possible and effectively, anticipating their proliferating expectations.
@@ -130,7 +127,7 @@ Having studied the already working platforms for investments, we found strengths
 
 \begin{itemize}
     \item Developing an efficient mobile application for investment management.
-    \item Increasing the level of users' engagement with recommendations using the power of AI.
+    \item Increasing the level of users' engagement with recommendations using the power of AI \cite{MobileRealityAIRealEstate2024, HouseCanaryAIInvestors2024}.
     \item Ensuring responsive and user-friendly interaction with the interface.
     \item Gaining the trust of investors by ensuring transparency and security in the investing platform.
     \item Enhancing the security of data and following all the financial regulations.
@@ -140,7 +137,7 @@ The \textbf{\textcolor{primary}{Korpor}} platform will be offering the following
 
 \begin{itemize}
     \item A directory of investment opportunities with deep financial insights into those opportunities.
-    \item AI-driven recommendations of investments as per users' preferences.
+    \item AI-driven recommendations of investments as per users' preferences \cite{LinkedInAIFinTech2024}.
     \item Smooth funding and payout mechanisms.
     \item Real-time portfolio performance tracking on a single screen/dashboard.
     \item Forum for interactive discussions on strategy and market trends among its users.
@@ -153,7 +150,7 @@ The completion of the project on its delivery date is the main problem of every 
 
 \subsection{SCRUM}
 
-\textbf{\textcolor{primary}{Scrum}} is an agile development approach that is used to create software using incremental and iterative methods. Scrum is a quick, flexible, and efficient agile methodology that is intended to provide value to the client at every stage of the project's development. Scrum's main goal is to meet customer needs by fostering an atmosphere of open communication, group accountability, and constant improvement. The development process begins with a broad concept of what must be constructed, developing a list of features that the product owner desires, and arranging them according to priority (product backlog).
+\textbf{\textcolor{primary}{Scrum}} is an agile development approach that is used to create software using incremental and iterative methods. Scrum is a quick, flexible, and efficient agile methodology that is intended to provide value to the client at every stage of the project's development \cite{ScrumGuide2020}. Scrum is founded on empiricism and lean thinking, employing an iterative, incremental approach guided by the three pillars of transparency, inspection, and adaptation \cite{AtlassianScrumPillars, ScrumGuide2020}. Scrum's main goal is to meet customer needs by fostering an atmosphere of open communication, group accountability, and constant improvement, underpinned by the Scrum values of Commitment, Focus, Openness, Respect, and Courage \cite{ScrumGuide2020}. The development process begins with a broad concept of what must be constructed, developing a list of features that the product owner desires, and arranging them according to priority (product backlog).
 
 \subsection{Agile Scrum roles and responsibilities}
 
@@ -192,7 +189,7 @@ The Scrum Master focuses on:
 
 \subsection{The Scrum Events}
 
-The Scrum events are key elements of the Scrum Framework. They provide regular opportunities for enacting the Scrum pillars of Inspection, Adaptation and Transparency. In addition, they help teams keep aligned with the Sprint and Product Goals, improve Developer productivity, and remove impediments and reduce the need to schedule too many additional meetings.
+The Scrum events are key elements of the Scrum Framework. They provide regular opportunities for enacting the Scrum pillars of Inspection, Adaptation and Transparency \cite{ScrumGuide2020}. In addition, they help teams keep aligned with the Sprint and Product Goals, improve Developer productivity, and remove impediments and reduce the need to schedule too many additional meetings.
 
 \begin{itemize}
     \item \textbf{Sprint}: All work in Scrum is done in a series of short projects called Sprints. This enables rapid feedback loops.
