feat(doc): Confidentiality Note

--- a/rapport.tex
+++ b/rapport.tex
@@ -269,6 +269,17 @@
 \null
 \newpage
 
+% Confidentiality Note
+\vspace*{\fill} % Push to vertical center
+\begin{center}
+    \Large % Increase font size
+    \textbf{Confidentiality Note}\\[1em]
+    Some information in this report has been redacted for confidentiality reasons.
+    Thank you for your understanding.
+\end{center}
+\vfill % Balance vertical space
+\newpage
+
 % Start Arabic page numbering
 \pagenumbering{arabic}
 
